force-app/main/default/objects/Commissionable_Value_Map__c/Commissionable_Value_Map__c.object-meta.xml
<CustomObject>
    <description>Maps opportunity fields to commissionable values within a transaction category, controlling which fields contribute to commission calculations.</description>
    <label>Commissionable Value Map</label>
    <nameField>
        <label>Commissionable Value Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commissionable Value Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>