force-app/main/default/objects/Commissionable_Value_Map__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <description>How this value adjusts the primary commissionable value.</description>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Subtract_From_Primary</fullName>
            </value>
            <value>
                <fullName>Multiply_By_Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>