force-app/main/default/objects/Commissionable_Value_Map__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>User-friendly label for the mapped field.</description>
    <label>Field Label</label>
    <type>Text</type>
    <length>100</length>
</CustomField>