force-app/main/default/objects/Commissionable_Value_Map__c/fields/Is_Attainment_Value__c.field-meta.xml
<CustomField>
    <fullName>Is_Attainment_Value__c</fullName>
    <description>Indicates whether this value counts toward attainment.</description>
    <label>Is Attainment Value</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>