force-app/main/default/objects/Commissionable_Value_Map__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <description>Indicates whether this is the primary commissionable value.</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>