force-app/main/default/objects/Commissionable_Value_Map__c/fields/Opportunity_Field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Field__c</fullName>
    <description>API name of the opportunity field mapped to this commissionable value.</description>
    <label>Opportunity Field</label>
    <type>Text</type>
    <length>100</length>
</CustomField>