force-app/main/default/objects/Commissionable_Value_Map__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Display order for this value mapping.</description>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>