force-app/main/default/objects/Commissionable_Value_Map__c/fields/Transaction_Category__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Category__c</fullName>
    <description>The parent transaction category this value map belongs to.</description>
    <label>Transaction Category</label>
    <type>MasterDetail</type>
    <referenceTo>Transaction_Category__c</referenceTo>
    <relationshipLabel>Value Mappings</relationshipLabel>
    <relationshipName>Value_Mappings</relationshipName>
</CustomField>